--- a/src/Components/Notification.razor.css
+++ b/src/Components/Notification.razor.css
@@ -124,7 +124,7 @@
   color: #1e1e24;
 }
 
-@keyframes hideN {
+@keyframes hide {
   to {
     height: 0;
   }
@@ -154,11 +154,11 @@
 }
 
 .showNotification {
-  animation: slideInDown 0.5s ease-out 0s 0.5;
+  animation: slideInDown 0.75s ease-out 0s 1;
 }
 
 .dismissNotification {
-  animation: slideOutRight 0.5s, hideN 0.1s ease-out 0.5s 1;
+  animation: slideOutRight 0.5s ease-out 0s 1, hide 0.1s linear 0.5s 1;
   animation-fill-mode: forwards;
 }
 
