--- a/src/Components/Notification.razor.scss
+++ b/src/Components/Notification.razor.scss
@@ -1,6 +1,6 @@
 ﻿@import '../_theme.scss';
 
-@keyframes hideN{
+@keyframes hide{
     to{
         height:0;
     }
@@ -35,11 +35,11 @@
 }
 
 .showNotification {
-    animation: slideInDown .5s ease-out 0s .5;
+    animation: slideInDown .75s ease-out 0s 1;
 }
 
 .dismissNotification {
-    animation: slideOutRight .5s, hideN .1s ease-out .5s 1;
+    animation: slideOutRight .5s ease-out 0s 1, hide .1s linear .5s 1;
     animation-fill-mode: forwards;
 }
 
