--- a/src/Shared/NotificationContainer.razor
+++ b/src/Shared/NotificationContainer.razor
@@ -3,7 +3,10 @@
         <div id="notifications" class="row align-content-start justify-content-start flex-column-reverse">
         @foreach (var message in Notifications)
         {
-            <Notification Id="@Notifications.IndexOf(message).ToString()" Message="message" MessageDismissed="purgeOldNotifications"></Notification>
+            if (message.State != MessageState.isHidden || message.State != MessageState.isDismissed)
+            {
+                <Notification Id="@Notifications.IndexOf(message).ToString()" Message="message" MessageDismissed="purgeOldNotifications"></Notification>
+            }
         }
         </div>
     </div>
