--- a/src/Components/Notification.razor
+++ b/src/Components/Notification.razor
@@ -1,4 +1,4 @@
-﻿<div id="notificationAnimationContainer" class="@((Message!.IsVisible == true) ? "showNotification" : "dismissNotification")">
+﻿<div id="notificationAnimationContainer" class="@(getAnimationClass())">
     <div id="@Id" class="toast mm-bg-light show" role="alert" aria-live="assertive" aria-atomic="true">
         <div class="toast-header @(SetBorderColor()) mm-bg-light">
             @switch(Message?.Type)
