--- a/src/_Imports.razor
+++ b/src/_Imports.razor
@@ -10,3 +10,4 @@
 @using Blazor.Frontend.Shared
 @using Blazor.Frontend.Components
 @using Blazor.Frontend.Classes
+@using BlazorDeferredRemove.Components
