--- a/src/Components/Notification.razor.css
+++ b/src/Components/Notification.razor.css
@@ -158,16 +158,6 @@
   display: none;
 }
 
-.isDisplaying {
-  animation: slideInDown 0.75s ease-out 0s 1;
-  animation-fill-mode: forwards;
-}
-
-.isDismissing {
-  animation: slideOutRight 0.5s ease-out 0s 1, hide 0.1s linear 0.5s 1;
-  animation-fill-mode: forwards;
-}
-
 .showNotification {
   animation: slideInDown 0.75s ease-out 0s 1;
 }
@@ -208,4 +198,4 @@
   border-color: #DBA507;
 }
 
-/*# sourceMappingURL=data:application/json;charset=utf-8,%7B%22version%22:3,%22sourceRoot%22:%22%22,%22sources%22:%5B%22file:///C:/Users/mahaf/Documents/sourceCode/MeetingManager/Blazor.Frontend/Blazor.Frontend/src/_theme.scss%22,%22file:///C:/Users/mahaf/Documents/sourceCode/MeetingManager/Blazor.Frontend/Blazor.Frontend/src/Components/Notification.razor.scss%22%5D,%22names%22:%5B%5D,%22mappings%22:%22AACA;AACA;AACA;AACA;AACA;AAWA;EACI,kBAXM;;;AAcV;EACI,kBARK;;;AAWT;EACI,kBAlBM;;;AAqBV;EACI,kBAjBM;;;AAoBV;EACI,kBAxBO;;;AA2BX;EACI,kBA3BI;;;AA8BR;EACI,kBA9BK;;;AAiCT;EACI,kBArCO;;;AAwCX;EACI,kBAnCO;;;AAsCX;EACI,OA/CM;;;AAkDV;EACI,OA5CK;;;AA+CT;EACI,OAtDM;;;AAyDV;EACI,OArDM;;;AAwDV;EACI,OA5DO;;;AA+DX;EACI,OA/DI;;;AAkER;EACI,OAlEK;;;AAqET;EACI,OAzEO;;;AA4EX;EACI,OAvEO;;;AA2EX;EACI,cApFM;;;AAuFV;EACI,cAjFK;;;AAoFT;EACI,cA3FM;;;AA8FV;EACI,cA1FM;;;AA6FV;EACI,cAjGO;;;AAoGX;EACI,cApGI;;;AAuGR;EACI,cAvGK;;;AA0GT;EACI,cA9GO;;;AAiHX;EACI,cA5GO;;;AA+GX;EACI;;;AAGJ;EACI;;;AAGJ;EACI;EACA,OAjIM;;;ACJV;EACI;IACI;;;AAIR;EACI;IACI;IACA;;EAGJ;IACI;IACA;;;AAIR;EACI;IACI;IACA;;EAGJ;IACI;IACA;;;AAIR;EACI;;;AAGJ;EACI;EACA;;;AAGJ;EACI;EACA;;;AAOJ;EACI;EACA;;;AAMJ;EACI;;;AAGJ;EACI;EACA;;;AAGJ;EACI,OD9DM;EC+DN;EACA;;;AAGJ;EACI;;;AAGJ;EACI;;;AAGJ;EACI;EACA;;;AAGJ;EACI,cD7EI;;;ACgFR;EACI,cD/EM;;;ACkFV;EACI,cDtFO%22%7D */
+/*# sourceMappingURL=data:application/json;charset=utf-8,%7B%22version%22:3,%22sourceRoot%22:%22%22,%22sources%22:%5B%22file:///C:/Users/mahaf/Documents/sourceCode/MeetingManager/Blazor.Frontend/Blazor.Frontend/src/_theme.scss%22,%22file:///C:/Users/mahaf/Documents/sourceCode/MeetingManager/Blazor.Frontend/Blazor.Frontend/src/Components/Notification.razor.scss%22%5D,%22names%22:%5B%5D,%22mappings%22:%22AACA;AACA;AACA;AACA;AACA;AAWA;EACI,kBAXM;;;AAcV;EACI,kBARK;;;AAWT;EACI,kBAlBM;;;AAqBV;EACI,kBAjBM;;;AAoBV;EACI,kBAxBO;;;AA2BX;EACI,kBA3BI;;;AA8BR;EACI,kBA9BK;;;AAiCT;EACI,kBArCO;;;AAwCX;EACI,kBAnCO;;;AAsCX;EACI,OA/CM;;;AAkDV;EACI,OA5CK;;;AA+CT;EACI,OAtDM;;;AAyDV;EACI,OArDM;;;AAwDV;EACI,OA5DO;;;AA+DX;EACI,OA/DI;;;AAkER;EACI,OAlEK;;;AAqET;EACI,OAzEO;;;AA4EX;EACI,OAvEO;;;AA2EX;EACI,cApFM;;;AAuFV;EACI,cAjFK;;;AAoFT;EACI,cA3FM;;;AA8FV;EACI,cA1FM;;;AA6FV;EACI,cAjGO;;;AAoGX;EACI,cApGI;;;AAuGR;EACI,cAvGK;;;AA0GT;EACI,cA9GO;;;AAiHX;EACI,cA5GO;;;AA+GX;EACI;;;AAGJ;EACI;;;AAGJ;EACI;EACA,OAjIM;;;ACJV;EACI;IACI;;;AAIR;EACI;IACI;IACA;;EAGJ;IACI;IACA;;;AAIR;EACI;IACI;IACA;;EAGJ;IACI;IACA;;;AAIR;EACI;;;AAGJ;EACI;EACA;;;AAGJ;EACI;;;AAGJ;EACI;EACA;;;AAGJ;EACI,OD7CM;EC8CN;EACA;;;AAGJ;EACI;;;AAGJ;EACI;;;AAGJ;EACI;EACA;;;AAGJ;EACI,cD5DI;;;AC+DR;EACI,cD9DM;;;ACiEV;EACI,cDrEO%22%7D */
