--- a/src/Shared/NotificationContainer.razor
+++ b/src/Shared/NotificationContainer.razor
@@ -3,7 +3,7 @@
         <div id="notifications" class="row align-content-start justify-content-start flex-column-reverse">
         @foreach (var message in Notifications)
         {
-            if (message.State != MessageState.isHidden || message.State != MessageState.isDismissed)
+            if (message.IsVisible || message.State != MessageState.isDismissed)
             {
                 <Notification Id="@Notifications.IndexOf(message).ToString()" Message="message" MessageDismissed="purgeOldNotifications"></Notification>
             }
