--- a/src/Components/Notification.razor
+++ b/src/Components/Notification.razor
@@ -1,4 +1,4 @@
-﻿<div id="notificationAnimationContainer" class="@(getAnimationClass())">
+﻿<div class="notificationAnimationContainer @(getAnimationClass())">
     <div id="@Id" class="toast mm-bg-light show" role="alert" aria-live="assertive" aria-atomic="true">
         <div class="toast-header @(SetBorderColor()) mm-bg-light">
             @switch(Message?.Type)
@@ -21,7 +21,6 @@
         </div>
         <div class="toast-body">
             @Message?.Text
-            @Id
         </div>
     </div>
 </div>
