--- a/src/Shared/NotificationContainer.razor.css
+++ b/src/Shared/NotificationContainer.razor.css
@@ -17,4 +17,4 @@
   height: 100%;
 }
 
-/*# sourceMappingURL=data:application/json;charset=utf-8,%7B%22version%22:3,%22sourceRoot%22:%22%22,%22sources%22:%5B%22file:///C:/Users/mahaf/Documents/sourceCode/MeetingManager/Blazor.Frontend/Blazor.Frontend/src/Shared/NotificationContainer.razor.scss%22%5D,%22names%22:%5B%5D,%22mappings%22:%22AAAC;EACG;EACA;EACA;EACA;EACA;EACA;;;AAGJ;EACI;EACA;EACA;;;AAGJ;EACI%22%7D */
+/*# sourceMappingURL=data:application/json;charset=utf-8,%7B%22version%22:3,%22sourceRoot%22:%22%22,%22sources%22:%5B%22file:///C:/Users/mahaf/Documents/sourceCode/MeetingManager/Blazor.Frontend.Bootstrap/Blazor.Frontend.Bootstrap/src/Shared/NotificationContainer.razor.scss%22%5D,%22names%22:%5B%5D,%22mappings%22:%22AAAC;EACG;EACA;EACA;EACA;EACA;EACA;;;AAGJ;EACI;EACA;EACA;;;AAGJ;EACI%22%7D */
