--- a/src/Shared/AlertContainer.razor.css
+++ b/src/Shared/AlertContainer.razor.css
@@ -5,4 +5,4 @@
   top: 6%;
 }
 
-/*# sourceMappingURL=data:application/json;charset=utf-8,%7B%22version%22:3,%22sourceRoot%22:%22%22,%22sources%22:%5B%22file:///C:/Users/mahaf/Documents/sourceCode/MeetingManager/Blazor.Frontend/Blazor.Frontend/src/Shared/AlertContainer.razor.scss%22%5D,%22names%22:%5B%5D,%22mappings%22:%22AAAC;EACG;EACA;EACA;EACA%22%7D */
+/*# sourceMappingURL=data:application/json;charset=utf-8,%7B%22version%22:3,%22sourceRoot%22:%22%22,%22sources%22:%5B%22file:///C:/Users/mahaf/Documents/sourceCode/MeetingManager/Blazor.Frontend.Bootstrap/Blazor.Frontend.Bootstrap/src/Shared/AlertContainer.razor.scss%22%5D,%22names%22:%5B%5D,%22mappings%22:%22AAAC;EACG;EACA;EACA;EACA%22%7D */
