--- a/src/_Imports.razor
+++ b/src/_Imports.razor
@@ -6,7 +6,7 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
-@using Blazor.Frontend
-@using Blazor.Frontend.Shared
-@using Blazor.Frontend.Components
-@using Blazor.Frontend.Classes
+@using Blazor.Frontend.Bootstrap
+@using Blazor.Frontend.Bootstrap.Shared
+@using Blazor.Frontend.Bootstrap.Components
+@using Blazor.Frontend.Bootstrap.Classes
