layout almost complete

--- a/src/_Imports.razor
+++ b/src/_Imports.razor
@@ -9,7 +9,7 @@
 @using Microsoft.JSInterop
 @using Blazor.Frontend.Bootstrap
 @using Blazor.Frontend.Bootstrap.Areas.Demo
-@using Blazor.Frontend.Bootstrap.Areas.Demo.Components
+@* @using Blazor.Frontend.Bootstrap.Areas.Demo.Components *@
 @using Blazor.Frontend.Bootstrap.Layout
 @using Blazor.Frontend.Bootstrap.Layout.Components
 @using Blazor.Frontend.Bootstrap.Classes
