--- a/src/Areas/Demo/Components/AlertDemo.razor
+++ b/src/Areas/Demo/Components/AlertDemo.razor
@@ -19,27 +19,28 @@
             <ValidationMessage class="text-danger text-end" For="@(() => AlertMessage.Text)" />
         </div>
     </div>
-    <div class="row">
-        <InputRadioGroup @bind-Value="@AlertMessage.AutoDismiss">
-            <div class="row text-center">
-                <div class="col-5 m-0 p-0">
-                    <p>Auto-dismiss:</p>
-                </div>
-                <div class="col-3 me-3">
-                    <div>
-                        <InputRadio Value="true" />Yes<br />
-                    </div>
-                </div>
-                <div class="col-3">
-                    <InputRadio Value="false" />No<br />
+    <div class="row ps-0 pe-0">
+        <div class="col">
+            <div class="form-check form-switch">
+                <div class="row  ms-1">
+                    <InputCheckbox class="form-check-input" type="checkbox" id="dismissSwitch" @bind-Value="@AlertMessage.AutoDismiss"></InputCheckbox>
+                    <label class="form-check-label" for="dismissSwitch">Auto-dismiss:</label>
                 </div>
             </div>
-        </InputRadioGroup>
+        </div>
+        <div class="col-3 ms-2 @(AlertMessage.AutoDismiss ? "visible": "invisible") pe-0">
+            <div class="row">
+                <InputText id="displayTimeInput" @bind-Value="@AlertMessage.Text" class="form-control"></InputText>
+                <div class="col-1">
+                    <label for="displayTimeInput" class="form-label ps-2">Time</label>
+                </div>
+                <div class="col">
+                    <ValidationMessage class="text-danger text-end" For="@(() => AlertMessage.Text)" />
+                </div>
+            </div>
+        </div>
         <div class="col-1">
             <label for="messageTextInput" class="form-label ps-2"></label>
-        </div>
-        <div class="col text-end">
-            <ValidationMessage class="text-danger" For="@(() => AlertMessage.AutoDismiss)" />
         </div>
     </div>
     <div class="text-center row d-flex m-0 p-0 align-content-end">
