--- a/src/Areas/Demo/Demo.razor
+++ b/src/Areas/Demo/Demo.razor
@@ -1,8 +1,7 @@
 ﻿@page "/"
-
 <PageTitle>Demo</PageTitle>
 <div class="d-flex flex-column">
-    <div class="border border-2 border-black mt-4 m-2 card shadow-sm">
+    <div class="border border-2 border-black mt-4 m-2 card">
         <div class="h1 text-center">Component demo</div>
 
         <div class="card-body row">
@@ -10,21 +9,21 @@
                 <SpinnerDialogDemo></SpinnerDialogDemo>
             </div>
 
-            <div class="col d-flex">
+            <div class="col">
                 <ConfirmationDialogDemo></ConfirmationDialogDemo>
             </div>
 
-            <div class="col d-flex">
+            <div class="col">
                 <NotificationDemo></NotificationDemo>
             </div>
 
-            <div class="col d-flex me-1 ms-1">
+            <div class="col me-1 ms-1">
                 <AlertDemo></AlertDemo>
             </div>
         </div>
     </div>
     <hr />
-    <div class="card border border-2 border-black pb-4 m-2 card shadow-sm">
+    <div class="card border border-2 border-black pb-4 m-2 card">
         <div class="card-body">
             <div class="h1 text-center">Palette</div>
             <div class="row m-auto">
