--- a/src/Areas/Demo/Components/AlertDemo.razor.css
+++ b/src/Areas/Demo/Components/AlertDemo.razor.css
@@ -1,16 +1,3 @@
-﻿.form-check {
-  position: relative;
-  width: 200px;
-}
+﻿
 
-.form-check-input {
-  position: absolute;
-  right: 0;
-}
-
-.form-check-label {
-  position: absolute;
-  left: 0;
-}
-
-/*# sourceMappingURL=data:application/json;charset=utf-8,%7B%22version%22:3,%22sourceRoot%22:%22%22,%22sources%22:%5B%22file:///C:/Users/mahaf/Documents/sourceCode/Blazor.Frontend/Blazor.Frontend/src/Areas/Demo/Components/AlertDemo.razor.scss%22%5D,%22names%22:%5B%5D,%22mappings%22:%22AAAA;EACI;EACA;;;AAGJ;EACI;EACA;;;AAGJ;EACI;EACA%22%7D */
+/*# sourceMappingURL=data:application/json;charset=utf-8,%7B%22version%22:3,%22sourceRoot%22:%22%22,%22sources%22:%5B%5D,%22names%22:%5B%5D,%22mappings%22:%22%22%7D */
