--- a/src/Areas/Demo/Demo.razor
+++ b/src/Areas/Demo/Demo.razor
@@ -5,7 +5,7 @@
         <div class="h1 text-center">Component demo</div>
 
         <div class="card-body row">
-            <div class="col d-flex">
+            <div class="col">
                 <SpinnerDialogDemo></SpinnerDialogDemo>
             </div>
 
@@ -17,7 +17,7 @@
                 <NotificationDemo></NotificationDemo>
             </div>
 
-            <div class="col me-1 ms-1">
+            <div class="col">
                 <AlertDemo></AlertDemo>
             </div>
         </div>
