--- a/src/Layout/Components/SpinnerDialog.razor
+++ b/src/Layout/Components/SpinnerDialog.razor
@@ -3,7 +3,7 @@
         <div class="modal-content">
             <div class="modal-body text-center">
                 <div class="spin spinner-border text-accent1" role="status"></div>
-                <div class="h5 mt-3">@SpinnerDialogOptions.Message</div>
+                <div class="h5 mt-3">@Message</div>
             </div>
         </div>
     </div>
