--- a/src/Areas/Demo/Components/ConfirmationDialogDemo.razor
+++ b/src/Areas/Demo/Components/ConfirmationDialogDemo.razor
@@ -1,48 +1,52 @@
-﻿<div class="row ms-3">
+﻿<div class="row">
     @if(!hasRun)
     {
-        <EditForm Model="@options" OnValidSubmit="@OpenConfirmationDialog" class="row">
+        <EditForm Model="@Options" OnValidSubmit="@OpenConfirmationDialog" class="row">
             <DataAnnotationsValidator />
 
-            <div class="row p-0 m-0 ">
-                <InputText id="confirmationTitleInput" @bind-Value="@options.Title" class="form-control"></InputText>
+            <div @ref="title" class="row p-0 m-0" @onmouseover="@(() => openToolTip(title, "The title of the modal."))">
+                <InputText id="confirmationTitleInput" @bind-Value="@Options.Title" class="form-control"></InputText>
                 <div class="col-1">
                     <label for="confirmationTitleInput" class="form-label">Title</label>
                 </div>
                 <div class="col">
-                    <ValidationMessage class="text-danger text-end" For="@(() => options.Title)" />
+                    <ValidationMessage class="text-danger text-end" For="@(() => Options.Title)" />
                 </div>
             </div>
 
-            <div class="row p-0 m-0">
-                <InputText id="messageTextInput" @bind-Value="@options.Message" class="form-control"></InputText>
+            <div @ref="text" class="row p-0 m-0" @onmouseover="@(() => openToolTip(text, "The message to the display; a yes/no question."))">
+                <InputText id="messageTextInput" @bind-Value="@Options.Message" class="form-control"></InputText>
                 <div class="col-1">
-                    <label for="messageTextInput" class="form-label ps-2">
+                    <label for="messageTextInput" class="form-label">
                         Text
                     </label>
                 </div>
                 <div class="col">
-                    <ValidationMessage class="text-danger text-end" For="@(() => options.Message)" />
+                    <ValidationMessage class="text-danger text-end" For="@(() => Options.Message)" />
                 </div>
             </div>
 
-            <div class="row p-0 m-0">
-                <div class="col ps-0">
-                    <InputText id="okButtonTextInput" @bind-Value="@options.OkButtonText" class="form-control"></InputText>
-                    <div class="col text-start">
-                        <label for="okButtonTextInput" class="form-label ps-2">
-                            Ok Text
-                        </label>
-                        <ValidationMessage class="text-danger text-end" For="@(() => options.OkButtonText)" />
+            <div  class="row p-0 m-0">
+                <div @ref="okText" class="col" @onmouseover="@(() => openToolTip(okText, "The text of the Ok button."))">
+                    <div class="row">
+                        <InputText id="okButtonTextInput" @bind-Value="@Options.OkButtonText" class="form-control"></InputText>
+                        <div class="col text-start">
+                            <label for="okButtonTextInput" class="form-label">
+                                Ok Text
+                            </label>
+                            <ValidationMessage class="text-danger text-end" For="@(() => Options.OkButtonText)" />
+                        </div>
                     </div>
                 </div>
-                <div class="col p-0 m-0">
-                    <InputText id="cancelButtonTextInput" @bind-Value="@options.CancelButtonText" class="form-control"></InputText>
-                    <div class="col text-start">
-                        <label for="cancelButtonTextInput" class="form-label ps-2">
-                            Cancel Text
-                        </label>
-                        <ValidationMessage class="text-danger text-end" For="@(() => options.OkButtonText)" />
+                <div class="col ms-3">
+                    <div @ref="cancelText" class="row" @onmouseover="@(() => openToolTip(cancelText, "The text of the cancel button."))">
+                        <InputText id="cancelButtonTextInput" @bind-Value="@Options.CancelButtonText" class="form-control"></InputText>
+                        <div class="col text-start">
+                            <label for="cancelButtonTextInput" class="form-label">
+                                Cancel Text
+                            </label>
+                            <ValidationMessage class="text-danger text-end" For="@(() => Options.OkButtonText)" />
+                        </div>
                     </div>
                 </div>
             </div>
