add enviroment borders

--- a/src/Layout/MainLayout.razor
+++ b/src/Layout/MainLayout.razor
@@ -1,4 +1,7 @@
 ﻿@inherits LayoutComponentBase
+<div id="envBorder" class="@borderClassName">
+    <div class="text-center borderText">@Env.Environment</div>
+</div>
 <div id="mainContainer" class="bg-light vh-100">
     <div id="headerContainer" class="bg-accent1">
         <header class="row w-100 p-0 m-0">
