--- a/src/Layout/MainLayout.razor.scss
+++ b/src/Layout/MainLayout.razor.scss
@@ -38,3 +38,52 @@
 #rightContainer {
     flex: 1;
 }
+.borderText {
+    margin-top: -23px;
+    text-align: center;
+    color: aliceblue
+}
+
+#envBorder {
+    position: absolute;
+    z-index: 100;
+    pointer-events: none;
+}
+
+.dev {
+    position: fixed;
+    top: 0;
+    left: 0;
+    border: 20px solid rgb(map-get($darkBlue, 400), .5);
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+.qa {
+    position: fixed;
+    top: 0;
+    left: 0;
+    border: 20px solid rgb(map-get($green, 400), .5);
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    pointer-events: none;
+}
+
+.stage {
+    position: fixed;
+    top: 0;
+    left: 0;
+    border: 20px solid rgb(map-get($red, 400), .5);
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    pointer-events: none;
+}
